# Exergaming-NTNU

GameCaptureThree/: GameCaptureThree.sln
GameCaptureThree/GameCaptureThree/: GameCaptureThree.cpp  GameCaptureThree.h  GameCaptureThree.rc  GameCaptureThree.vcxproj  GameCaptureThree.vcxproj.filters  ReadMe.txt  Resource.h  stdafx.cpp
KinectTesting/KinectTesting/: App.xaml  KinectTesting.csproj  MainWindow.xaml  MainWindow.xaml.cs
KinectTesting/KinectTesting/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Theia/: Theia.sln
Theia/Theia/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Theia.csproj
Theia/Theia/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
kinect/VisualStudio/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Point Cloud.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pcd_write_test.vcxproj  pcd_write_test.vcxproj.filters  resource.h
pcd_converter/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pcd_converter.cpp  pcd_converter.sln  pcd_converter.vcxproj  pcd_converter.vcxproj.filters
python/: IPMenuClass.py  MainMenuClass.py  ReceiverClass.py  ReceiverMenuClass.py  RunAsAdmin.py  ServerMenuClass.py  TEMP.py  Update.py  client.py  clock.py  clock2.py  derp.bat  install-python.bat  main.py  main.pyw  makeIPStatic.py  receiver.py  responder.py  sadmin.py  server.py  settings.py  systemTime.py  updateTime.bat  x.py
